# nxscli

./: .coveragerc  .gitignore  .pylintrc  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
docs/: library.rst  triggers.rst  usage.rst
src/nxscli/: __init__.py  __main__.py  _plugins.py  animation_mpl.py  channelref.py  control_server.py  ext_commands.py  ext_interfaces.py  ext_plugins.py  idata.py  iplugin.py  istream.py  logger.py  pdefault.py  phandler.py  plot_mpl.py  plugin.py  plugins_loader.py  pluginthr.py  stream_hub.py  trigger.py
src/nxscli/cli/: environment.py  main.py  types.py
src/nxscli/commands/: cmd_config.py  cmd_csv.py  cmd_devinfo.py  cmd_interface.py  cmd_none.py  cmd_npmem.py  cmd_npsave.py  cmd_printer.py  cmd_udp.py  cmd_version.py
src/nxscli/commands/config/: cmd_chan.py  cmd_trig.py  cmd_vadd.py
src/nxscli/commands/interface/: cmd_dummy.py  cmd_rtt.py  cmd_serial.py  cmd_udp.py
src/nxscli/main/: cmd_config.py  cmd_interface.py  environment.py  main.py  types.py
src/nxscli/mpl/: _plugins.py  animation_mpl.py  plot_mpl.py
src/nxscli/mpl/commands/: cmd_ani1.py  cmd_ani2.py  cmd_cap.py  cmd_mpl.py
src/nxscli/mpl/plugins/: animation1.py  animation2.py  capture.py
src/nxscli/np/: _plugins.py
src/nxscli/np/commands/: cmd_npmem.py  cmd_npsave.py
src/nxscli/np/plugins/: npmem.py  npsave.py
src/nxscli/plugins/: animation1.py  animation2.py  capture.py  csv.py  devinfo.py  none.py  npmem.py  npsave.py  printer.py  showinfo.py  udp.py
src/nxscli/transforms/: models.py  operators_sample.py  operators_window.py  pipeline.py  window_engine.py
src/nxscli/trigger/: __init__.py  core.py
src/nxscli/virtual/: errors.py  manager.py  models.py  operators.py  runtime.py  services.py
tests/: conftest.py  fake_nxscope.py  test_animationmpl.py  test_channelref.py  test_control_server.py  test_idata.py  test_iplugin.py  test_istream.py  test_nxscli.py  test_pdefault.py  test_phandler.py  test_pipeline.py  test_plotmpl.py  test_plugin.py  test_pluginsloader.py  test_pluginthr.py  test_pluglist.py  test_stream_hub.py  test_transforms.py  test_trigger.py
tests/cli/: test_main.py  test_types.py
tests/main/: test_main.py  test_types.py
tests/mpl/: test_animationmpl.py  test_plotmpl.py
tests/mpl/plugins/: test_animation1.py  test_animation2.py  test_capture.py
tests/np/plugins/: test_npsave.py
tests/plugins/: test_animation1.py  test_animation2.py  test_capture.py  test_csv.py  test_devinfo.py  test_npmem.py  test_npsave.py  test_showinfo.py  test_udp.py
tests/virtual/: test_command.py  test_manager.py  test_models.py  test_operators.py  test_params.py  test_runtime.py
